--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>I'm App Component</h1>
-<hr/>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>I'm App Component</h3>
+            <hr/>
+            <app-servers></app-servers>
+            <!-- <div app-servers></div> -->
+            <!-- <div class="app-servers" ></div> -->
+        </div>
+    </div>
+</div>
