--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,4 @@
+<button class="btn btn-primary"  [disabled]="!allowClick" >Click</button>
+<br/>
 <app-server></app-server>
 <app-server></app-server>
