--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,5 +1,11 @@
 <div class="container">
     <div class="row">
+        <input type="text" class="form-control"
+            (input)="updateText($event)"/>
+        <input type="text" class="form-control"
+            [(ngModel)]="clicked" />
+    </div>
+    <div class="row">
         <div class="col-xs-2">
             <button class="btn btn-primary" [disabled]="!allowClick"
                 (click)="onClicked($event)">Click</button>
