--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -14,6 +14,9 @@
             <p>{{clicked}}</p>
         </div>
     </div>
+    <div class="row">
+        <p *ngIf="allowClick">Server was created </p>
+    </div>
 </div>
 <br />
 <app-server></app-server>
